# SnoreGrowl

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/: growl.h  growl.hpp  growl_exports.h
src/: CMakeLists.txt  SnoreGrowl++Config.cmake.in  SnoreGrowlConfig.cmake.in  gntp-send.c  gntp-send.cpp  growl.c  growl.cpp  growl.h  md5.c  md5.h  tcp.c  tcp.h
